--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "target",
   "version": "1.0.0",
   "main": "expo-router/entry",
-  "type": "module",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -16,22 +15,23 @@
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
+    "react-native-currency-input": "^1.1.1",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
-    "eslint": "^9.37.0",
+    "@stylistic/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.38.0",
     "typescript": "~5.8.3"
   },
   "private": true
