--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.4",
     "expo-status-bar": "~2.2.3",
+    "expo-sqlite": "15.2.10",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-currency-input": "^1.1.1",
