--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.4.1",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "^5.1.4",
-    "expo-status-bar": "~2.2.3",
     "expo-sqlite": "15.2.10",
+    "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
     "react-native-currency-input": "^1.1.1",
@@ -28,8 +29,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~19.0.10",
     "@stylistic/eslint-plugin": "^5.5.0",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "eslint": "^9.38.0",
